--- a/environment.yml
+++ b/environment.yml
@@ -2,11 +2,7 @@ name: osmnx-examples
 channels:
   - conda-forge
 dependencies:
+  - descartes
+  - jupyterlab
   - osmnx=1.1.1
   - python-igraph
-  - ipywidgets
-  - matplotlib
-  - numpy
-  - pip
-  - pip:
-    - nbinteract
