--- a/environment.yml
+++ b/environment.yml
@@ -1,8 +1,6 @@
 name: osmnx-examples
 channels:
   - conda-forge
+  - defaults
 dependencies:
-  - descartes
-  - jupyterlab
   - osmnx=1.0.1
-  - python-igraph
